# boilstream-extension

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  SECURITY_SPECIFICATION.md  build-wasm-fixed.sh  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
opaque-client/: Cargo.toml
opaque-client/.cargo/: config.toml
opaque-client/src/: lib.rs
opaque-client/test-wasm/: INTEGRATION_TEST_README.md  QUICK_START.md  README.md  build-integration-test.sh  build-simple.sh  integration-node.cjs  integration-server.cjs  integration-simple.c  integration-simple.js  integration-simple.wasm  integration-test.c  integration-test.js  integration-test.wasm  package.json  run-integration-test.cjs  run-integration-test.js  test-ffi.c  test-ffi.sh  test-opaque.cjs
opaque-client/tests/: aws_signing_tests.rs
scripts/: wasm-opt-wrapper-template.sh  wasm-opt-wrapper.sh
src/: README.md  boilstream_c_api.cpp  boilstream_extension.cpp  boilstream_secret_storage.cpp  opaque_design.md  opaque_wrapper.cpp
src/include/: boilstream_extension.hpp  boilstream_secret_storage.hpp  opaque_client.h  opaque_client_ffi.hpp  opaque_wrapper.hpp
test/: README.md  README_TESTS.md
test/cpp/: CMakeLists.txt  README.md  test_aws_signing.cpp  test_boilstream_conformance.cpp  test_boilstream_crypto.cpp  test_boilstream_encryption.cpp  test_boilstream_integration.cpp  test_boilstream_security.cpp
test/sql/: boilstream.test  boilstream_security.test
test/wasm/: README.md  REBUILD_INSTRUCTIONS.md  WASM_BUILD_FINDINGS.md  WASM_TEST_STATUS.md  package-lock.json  package.json  server.js  test-a5-official.html  test-a5.html  test-basic.js  test-native.js  test-wasm-browser.html  test-wasm-simple.js
test/wasm/a5-test/: a5-compiled.duckdb_extension.wasm
