[package]
name = "opaque-client"
version = "0.1.0"
edition = "2021"

[lib]
# staticlib for C FFI on all platforms (native and WASM)
# Note: cdylib removed - not supported on musl targets and not needed for our use case
crate-type = ["staticlib"]

[dependencies]
opaque-ke = "3.0.0"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10.9"
hmac = "0.12.1"
hex = "0.4.3"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
